# AgentLaboratory

./: .coverage  .dockerignore  .gitignore  5.1.0  Cargo.toml  Dockerfile  Dockerfile.minimal  Dockerfile.optimized  README.md  ai_lab_repo.py  inference.py  papersolver.py  requirements-core.txt  requirements-ml.txt  run.sh  run_linux.sh  run_windows.bat  setup_environment.sh
.github/workflows/: test_matrix.yml
benches/: file_ops.rs
docker/: README.md  docker-entrypoint.sh
docker/gpu/: Dockerfile.gpu  README.md  docker-compose.win.yml
docker/minimal/: README.md  docker-compose.yml
docker/standard/: Dockerfile  README.md
examples/: quantum_research.rs  quantum_research_pure_rust.rs  sample_paper.txt
rust_agent_laboratory/: README.md
src/: lib.rs  main.rs
src/agents/: factory.rs  mod.rs  paper.rs  research.rs
src/context/: hardware.rs
src/interaction/: mod.rs
src/llm/: claude.rs  deepseek.rs  mod.rs
src/tools/: arxiv.rs  mod.rs
src/utils/: error.rs  file_ops.rs  init.rs  mod.rs
tests/: README.md
tests/deployment/: test_docker_builds.py
tests/deployment/linux/: test_linux_specific.py
tests/deployment/windows/: test_windows_specific.py
tests/integration/: agent_workflow.rs  test_workflow.rs
utils/: directory_manager.py  prompt_manager.py
